# scyrox

./: .gitignore  AGENTS.md  Cargo.toml  TASKS.md  devenv.nix  dprint.json  flake.nix
.cargo/: config.toml
crates/scyrox/: Cargo.toml
crates/scyrox-client/: Cargo.toml
crates/scyrox-client/src/: daemon.rs  direct.rs  lib.rs
crates/scyrox-gui/: Cargo.toml
crates/scyrox-gui/src/: app.rs  events.rs  main.rs  notifications.rs  tray.rs
crates/scyrox-proto/: Cargo.toml  build.rs
crates/scyrox-proto/proto/: scyrox.proto
crates/scyrox-proto/src/: convert.rs  lib.rs
crates/scyrox-tray/: Cargo.toml
crates/scyrox-tray/src/: daemon.rs  icon.rs  main.rs  notifications.rs  state.rs
crates/scyrox/src/: error.rs  io.rs  lib.rs  mouse.rs  paths.rs  protocol.rs  types.rs
crates/scyroxctl/: Cargo.toml
crates/scyroxctl/src/: backend.rs  cli.rs  client.rs  direct.rs  main.rs  output.rs
crates/scyroxctl/src/commands/: daemon.rs  get.rs  mod.rs  profile.rs  set.rs  status.rs
crates/scyroxctl/tests/: cli_parsing.rs  common.rs  daemon_lifecycle.rs  error_output.rs  get_commands.rs  profile_commands.rs  set_commands.rs  status_command.rs
crates/scyroxd/: Cargo.toml
crates/scyroxd/src/: battery_log.rs  config.rs  fs_util.rs  hotplug.rs  main.rs  profiles.rs  server.rs
docs/: battery_estimation.md  firmware_updates.md  protocol.md  sleep_timeout.md
scripts/: plot_battery.py
src/: error.rs  lib.rs  main.rs  mouse.rs  protocol.rs  types.rs
tests/: integration_tests.rs
