[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/yourusername/scyrox"

[workspace.dependencies]
# Internal crates
scyrox = { path = "crates/scyrox" }
scyrox-client = { path = "crates/scyrox-client" }
scyrox-proto = { path = "crates/scyrox-proto" }
scyroxctl = { path = "crates/scyroxctl" }
scyroxd = { path = "crates/scyroxd" }

# Async runtime
async-stream = "0.3.6"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }

# gRPC
prost = "0.14.3"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"

# IPC
interprocess = { version = "2.4.0", features = ["tokio"] }

# HID
hidapi = "2.6.5"

# CLI
clap = { version = "4.5.60", features = ["derive"] }

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Utilities
async-trait = "0.1.89"
directories = "6.0.0"
hex = "0.4.3"
hyper-util = { version = "0.1.20", features = ["tokio"] }
pin-project-lite = "0.2.17"
tower = "0.5.3"
