[package]
name = "scyrox-client"
version.workspace = true
edition.workspace = true
description = "Shared daemon client and backend abstraction for Scyrox mouse configuration"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hyper-util.workspace = true
interprocess.workspace = true
scyrox.workspace = true
scyrox-proto.workspace = true
serde.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
