[package]
name = "scyrox-gui"
version.workspace = true
edition.workspace = true
description = "GUI application with systray and desktop notifications for Scyrox mouse configuration"

[dependencies]
anyhow.workspace = true
iced = { version = "0.14.0", features = ["tokio"] }
ksni = "0.3.3"
notify-rust = "4.12.0"
scyrox.workspace = true
scyrox-client.workspace = true
scyrox-proto.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
