[package]
name = "scyrox-proto"
version.workspace = true
edition.workspace = true
description = "Protobuf definitions for Scyrox daemon IPC"

[dependencies]
prost.workspace = true
scyrox = { path = "../scyrox" }
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
