[package]
name = "scyrox-tray"
version.workspace = true
edition.workspace = true
description = "Cross-platform system tray battery indicator for Scyrox mice"

[dependencies]
ab_glyph = "0.2"
anyhow.workspace = true
fontdb = "0.23"
notify-rust = "4.18.0"
scyrox.workspace = true
scyrox-client.workspace = true
scyrox-proto.workspace = true
tao = "0.35"
tiny-skia = "0.12"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tray-icon = { version = "0.24", default-features = false, features = ["gtk"] }
