[package]
name = "scyrox"
version.workspace = true
edition.workspace = true
description = "Core library for Scyrox mouse USB/HID communication"

[dependencies]
hex.workspace = true
nusb.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
