[package]
name = "scyrox"
version.workspace = true
edition.workspace = true
description = "Core library for Scyrox mouse USB/HID communication"

[dependencies]
directories.workspace = true
hex.workspace = true
num_enum = "0.7"
nusb.workspace = true
serde.workspace = true
strum = { version = "0.26", features = ["derive"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
