[package]
name = "scyroxctl"
version.workspace = true
edition.workspace = true
description = "CLI tool for Scyrox mouse configuration"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
directories.workspace = true
hyper-util.workspace = true
interprocess.workspace = true
scyrox.workspace = true
scyrox-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
