[package]
name = "scyroxctl"
version.workspace = true
edition.workspace = true
description = "CLI tool for Scyrox mouse configuration"

[dependencies]
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
scyrox.workspace = true
scyrox-client.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
