[package]
name = "scyroxd"
version.workspace = true
edition.workspace = true
description = "Scyrox mouse configuration daemon"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
directories.workspace = true
hex.workspace = true
hidapi.workspace = true
hyper-util.workspace = true
interprocess.workspace = true
pin-project-lite.workspace = true
same-file.workspace = true
scyrox.workspace = true
scyrox-proto.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
